--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "chai": "^3.5.0",
     "express": "^4.14.0",
-    "mongodb": "^2.1.18"
+    "mocha": "^2.5.3",
+    "mongodb": "^2.1.18",
+    "request": "^2.72.0",
+    "request-promise": "^3.0.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
