--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "angular-chart.js": "^1.0.0-alpha8",
     "chai": "^3.5.0",
     "express": "^4.14.0",
     "mocha": "^2.5.3",
     "mongodb": "^2.1.18",
     "request": "^2.72.0",
-    "request-promise": "^3.0.0"
+    "request-promise": "^3.0.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {},
   "scripts": {
