--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "app.js",
   "dependencies": {
     "angular-chart.js": "^1.0.0-alpha8",
+    "babel-polyfill": "^6.9.1",
     "chai": "^3.5.0",
     "express": "^4.14.0",
     "mocha": "^2.5.3",
