--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mongodb": "^2.1.18",
     "request": "^2.72.0",
     "request-promise": "^3.0.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "jquery": "^1.11.3"
   },
   "devDependencies": {},
   "scripts": {
