--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "babel-polyfill": "^6.9.1",
     "chai": "^3.5.0",
     "express": "^4.14.0",
+    "jquery": "^1.11.3",
     "mocha": "^2.5.3",
     "mongodb": "^2.1.18",
     "request": "^2.72.0",
     "request-promise": "^3.0.0",
-    "underscore": "^1.8.3",
-    "jquery": "^1.11.3"
+    "serve-favicon": "^2.3.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {},
   "scripts": {
