--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "babel-polyfill": "^6.9.1",
     "chai": "^3.5.0",
     "express": "^4.14.0",
-    "jquery": "^1.11.3",
+    "jquery": "^1.12.4",
+    "jsdom": "^9.4.1",
     "mocha": "^2.5.3",
     "mongodb": "^2.1.18",
     "request": "^2.72.0",
