--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-polyfill": "^6.9.1",
     "chai": "^3.5.0",
     "express": "^4.14.0",
+    "fs-promise": "^0.5.0",
     "jquery": "^1.12.4",
     "jsdom": "^9.4.1",
     "mocha": "^2.5.3",
@@ -20,7 +21,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha --reporter spec"
+    "test": "node_modules/mocha/bin/mocha --recursive --reporter spec"
   },
   "repository": {
     "type": "git",
