--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "angular-chart.js": "^1.0.0-alpha8",
     "babel-polyfill": "^6.9.1",
     "chai": "^3.5.0",
+    "deep-assign": "^2.0.0",
     "express": "^4.14.0",
     "fs-promise": "^0.5.0",
     "jquery": "^1.12.4",
