--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "angular-chart.js": "^1.0.0-alpha8",
     "babel-polyfill": "^6.9.1",
+    "bluebird": "^3.4.1",
     "chai": "^3.5.0",
     "deep-assign": "^2.0.0",
     "express": "^4.14.0",
