change categoryconfig to only ALL

--- a/scraper/scrapCategoryConfig.json
+++ b/scraper/scrapCategoryConfig.json
@@ -8,7 +8,7 @@
                 ],
                 "categoryConfigs": [
                     {
-                        "category": "shop-power-banks",
+                        "category": "ALL",
                         "limit": 1
                     }
                 ]
